# mIRCo

./: Cargo.toml  LICENSE  README.md
src/: irc.rs  main.rs  server.rs
