[package]
name = "mirco"
version = "0.1.0"
authors = ["Andres Pipicello", "Pedro Carossi"]
edition = "2018"

[dependencies]
dns-lookup = "1.0.1"
whoami = "0.5.2"
rustyline = "5.0.0"
ansi-escapes = "0.1.0"
log = "^0.4"
unicode-width = "0.1"
bufstream = "0.1"
termion = "1.5.0"
terminal_size = "0.1.0"
crossterm = "0.9.0"
strum = "0.15.0"
strum_macros = "0.15.0"
regex = "1"
lazy_static = "1.3.0"