[package]
name = "mirco"
version = "0.1.0"
authors = ["Andres Pipicello", "Pedro Carossi"]
edition = "2018"

[dependencies]
dns-lookup = "1.0"
whoami = "0.5"
rustyline = "5.0"
ansi-escapes = "0.1"
log = "0.4"
unicode-width = "0.1"
bufstream = "0.1"
termion = "1.5"
terminal_size = "0.1"
crossterm = "0.10"
strum = "0.15"
strum_macros = "0.15"
regex = "1.2"
lazy_static = "1.4"